# flux-mcp

./: pyproject.toml  test  test_mcp.py
src/: agent_test.py  flux_adapter.py  main.py
tests/: image_generation.py  test_both_tools.py
