[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-mcp"
version = "0.1.0"
description = "MCP Server for AI image generation using Black Forest Labs' Flux models"
requires-python = ">=3.8"

dependencies = [
    "fastmcp",
    "python-dotenv",
    "requests",
    "pydantic",
]
