[project]
name = "flux-mcp"
version = "1.0.0"
description = "FLUX"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "python-dotenv",
    "openai",
    "pydantic",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
main = "main:main"